changed fonts and messed around a bit with scss

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -13,8 +13,8 @@ format:
   html:
     grid: 
       body-width: 1100px
-    theme: [flatly, theme-light.scss]
-    mainfont: Noto Sans
+    theme: [flatly, theme-dark.scss]
+    # mainfont: Noto Sans
     fontsize: 25px
     toc: true
     toc-location: left-body 
