--- a/_quarto.yml
+++ b/_quarto.yml
@@ -15,7 +15,7 @@ format:
       body-width: 1100px
     theme: [flatly, theme-dark.scss]
     # mainfont: Noto Sans
-    fontsize: 25px
+    fontsize: 1.25rem
     toc: true
     toc-location: left-body 
     toc-title: Contents
