--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,13 @@
-/.quarto/
-/_site/
+.Rproj.user
 .DS_Store
+.Rhistoryt
+.Rhistory
+/.quarto/
+/_*.local
+/.venv/
+/.condaenv/
+*_cache/
+/env/
+/_site/
+/.venv/
+
